initial version of model predictor with onnx and libs
